<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterCredentialsActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="32dp">

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:padding="4dp"
        android:background="@color/colorPrimary"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_email" />

    <EditText
        android:id="@+id/et_create_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:padding="4dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/museosans_300"
        android:hint="@string/register_et_create_pw_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_pw" />

    <EditText
        android:id="@+id/et_repeat_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:padding="4dp"
        android:background="@color/colorPrimary"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeat_pw" />

    <TextView
        android:id="@+id/tv_pw_reqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/register_tv_pw_req"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_pw" />

    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_500"
        android:text="@string/register_btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/register_tv_email"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/et_email_address"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_create_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/museosans_300"
        android:textColor="@color/colorPrimary"
        android:text="@string/register_tv_create_pw"
        app:layout_constraintBottom_toTopOf="@+id/et_create_pw"
        app:layout_constraintStart_toStartOf="@+id/et_create_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

    <TextView
        android:id="@+id/tv_repeat_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/museosans_300"
        android:textColor="@color/colorPrimary"
        android:text="@string/register_tv_repeat_pw"
        app:layout_constraintBottom_toTopOf="@+id/et_repeat_pw"
        app:layout_constraintStart_toStartOf="@+id/et_repeat_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_create_pw"
        app:layout_constraintVertical_bias="0.489" />

    <LinearLayout
        android:id="@+id/ll_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/et_repeat_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_pw">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cross"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>