<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="32dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_3"
        app:srcCompat="@mipmap/tick_foreground" />

    <TextView
        android:id="@+id/tv_details_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/launcher_details_1"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_details_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/launcher_details_2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_1" />

    <TextView
        android:id="@+id/tv_details_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/launcher_details_3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_2" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_300"
        android:text="@string/launcher_btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_details_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/launcher_details_4"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_3" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="59dp"-->
<!--        tools:layout_editor_absoluteY="41dp"-->
<!--        android:src="@drawable/logo_green_flag@2x.png" />-->

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_1"
        app:srcCompat="@mipmap/tick_foreground" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_1"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@mipmap/tick_foreground" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_1"
        app:srcCompat="@mipmap/tick_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>